--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ color:red;
     <input type="text" id="password" name="password" placeholder="Password">
 
   
-  <input type="submit"  value="Login">
+  <input type="submit" onclick="homePage()" value="Login">
     <!-- <p class="alert">Wrong password conformation</p> -->
     <div class="forgot"><a href="#">Forgot password?</a></div>
     <div class="link"><a href="sign_up.html">Sign Up</a></div>
@@ -134,5 +134,10 @@ color:red;
 </div>
 
    </div>
+   <script>
+function homePage() {
+    window.open("home.html");
+}
+</script>
   </body>
 </html>
