sign up page modification

--- a/sign_up.html
+++ b/sign_up.html
@@ -124,7 +124,7 @@ color:red;
     <input type="text" id="password" name="password" placeholder="Confirm Your password">
   
     <input type="submit" value="Sign up">
-    <p class="alert">Wrong password confirmation</p>
+    <!-- <p class="alert">Wrong password confirmation</p> -->
     <div class="link"><a href="index.html">Login</a></div>
 
   </form>
