--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
         display: flex;
 
       }
-      input[type=text], select {
+      input[type=email], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=password], select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -119,9 +128,9 @@ color:red;
   <h3>Login</h3>
   <form >
 
-    <input type="text" id="email" name="lastname" placeholder="Email address">
+    <input type="email" id="email" name="lastname" placeholder="Email address">
  <!-- <label>Password</label> -->
-    <input type="text" id="password" name="password" placeholder="Password">
+    <input type="password" id="password" name="password" placeholder="Password">
 
   
   <input type="submit" onclick="homePage()" value="Login">
