--- a/sign_up.html
+++ b/sign_up.html
@@ -1,121 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+ 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/style.css" >
+ 
+   <link rel="stylesheet" type="text/css" href="css/sign_up.css"/>
 
     <title>My Diary</title>
   </head>
-  <body>
-    <style>
-    body{
-      /*background-color: #e5e5e5;*/
-      background-image: url(images/background2.jpg);
-      background-size: 100% 100vh;
-    }
-      .card{
-        width: 50%;
-        min-width: 500px;
-        background-color: white;
-        min-height:400px;
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
-        /*border-radius:5px;*/
-        margin:50px auto 0 auto;
-        /*padding:5px;*/
-        display: flex;
-
-      }
-      input[type=text], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-  input[type=email], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-  input[type=password], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-input[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-}
-
-.signup {
-    border-radius: 5px;
-    padding: 20px;
-    flex:4;
-}
-.logo{
-flex:3;
-  /*width: 40%;*/
-  background-color: #16A2D3;
-   position: relative;
-}
-.description{
-  margin: 100px auto 0 auto;
-  text-align: center;
-  color: white;
-  padding: 10px;
-}
-p{
-  font-size: 16px;
-}
-.link{
-  float:right;
-}
-.img{
-  width: 100px;
-  height: 100px;
-  margin: 0 auto 0 auto;
-}
-.footer{
-   position: absolute;
-  bottom:0px;
-   /*position: relative;*/
-  color: white;
-  font-weight: bold;
-  font-size:12px;
-  padding:10px;
-}
-.alert{
-color:red;
-}
-    </style>
+  <body id="container">
+   
    <div class="card">
-    <!-- <h1>My Diary</h1> -->
-
-     <!-- <h3>Login</h3> -->
+  
      <div class="logo">
       <div class="description">
         <div class="img"><img src="images/logo.png" style="width: 100%;height:100%"></div>
