--- a/profile.html
+++ b/profile.html
@@ -54,8 +54,57 @@
 </div>
    </div>
 
-   <div class="card">
-  <strong>Reminder</strong>
+   <div class="reminder">
+  <!-- <div><strong>Reminder</strong></div> -->
+  <br>
+  <div class="content">
+<h3>Reminder</h3>
+<h4><u>Select Days</u></h4>
+<label class="container">Mon
+  <input type="checkbox" checked="checked">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Tue
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Wed
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Thu
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Fri
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Sat
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<label class="container">Sun
+  <input type="checkbox">
+  <span class="checkmark"></span>
+</label>
+<br>
+<br>
+<h4><u>Set time</u></h4>
+ <input type="time"  name="time"/>
+ <br><br>
+<label class="container" >Repeat
+  <input type="checkbox" checked="checked">
+  <span class="checkmark"></span>
+</label>
+<label class="container" id="enable" >Enable Reminder
+  <input type="checkbox" checked="checked">
+  <span class="checkmark"></span>
+</label>
+<br>
+<br>
+ <input type="submit" value="Set">
+</div>
    </div>
   </body>
 </html>
