change directory structure

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -16,7 +16,7 @@
     
       <span class="title">My Diary</span>
   <a href="index.html">Logout</a>
-  <a href="Home.html">Home</a>
+  <a href="home.html">Home</a>
 
 </div>
    <div class="card2">
