--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
  
-   <link rel="stylesheet" type="text/css" href="css/sign_up.css"/>
+   <link rel="stylesheet" type="text/css" href="css/landing.css"/>
 
     <title>My Diary</title>
   </head>
