--- a/UI/profile.html
+++ b/UI/profile.html
@@ -14,9 +14,10 @@
     
     <div class="navbar">
     
-      <span class="title">My Diary</span>
-  <a href="index.html">Logout</a>
-  <a href="home.html">Home</a>
+      <span class="title"> <a href="index.html">My Diary</a></span>
+    <a href="login.html">Logout</a>
+  <a href="profile.html" class="selected">Profile</a>
+<a href="home.html" >Home</a>
 
 </div>
    <div class="card2">
