--- a/UI/sign_up.html
+++ b/UI/sign_up.html
@@ -11,12 +11,18 @@
     <title>My Diary</title>
   </head>
   <body id="container">
-   
+    <div class="navbar">
+       
+      <span class="title"> <a href="index.html">My Diary</a></span>
+  <!-- <a href="index.html">Logout</a> -->
+  <a href="sign_up.html" class="selected">Register</a>
+  <a href="login.html">Login</a>
+</div> 
    <div class="card">
   
      <div class="logo">
       <div class="description">
-        <div class="img"><img src="images/logo.png" style="width: 100%;height:100%"></div>
+        <div class="img"><img src="images/logo.png"></div>
         
        <h3>My Diary</h3>
        <p>MyDiary is an online journal where users can pen down their thoughts and feelings. </p>
@@ -40,7 +46,7 @@
   
     <input type="submit" value="Sign up">
     <!-- <p class="alert">Wrong password confirmation</p> -->
-    <div class="link"><a href="index.html">Login</a></div>
+    <div class="link"><a href="login.html">Login</a></div>
 
   </form>
 </div>
