--- a/UI/login.html
+++ b/UI/login.html
@@ -37,7 +37,9 @@
     <input type="password" id="password" name="password" placeholder="Password">
 
   
-  <input type="submit" onclick="homePage()" value="Login">
+  <a href="home.html">
+   <input type="button" value="Login" />
+</a>
     <!-- <p class="alert">Wrong password conformation</p> -->
     <div class="forgot"><a href="#">Forgot password?</a></div>
     <div class="link"><a href="sign_up.html">Sign Up</a></div>
@@ -47,10 +49,6 @@
 </div>
 
    </div>
-   <script>
-function homePage() {
-    window.open("home.html");
-}
-</script>
+  
   </body>
 </html>
