--- a/UI/profile.html
+++ b/UI/profile.html
@@ -91,7 +91,9 @@
 </label>
 <br>
 <br>
-<h4><u>Set time</u></h4>
+<br>
+<br>
+<div><h4><u>Set time</u></h4></div>
  <input type="time"  name="time"/>
  <br><br>
 <label class="container" >Repeat
